fix(backend): Midei o nome da rota de alterar papel do usuário da instituição par um nome mais semântico e também alterei a rota de remover usuário da instituição, agora o usuário também pode utilizar a rota para sair da instituição.
